tests/compilation_failure_tests/iteration_order/malformed_no_parens.stderr
error: proc-macro derive panicked
 --> tests/compilation_failure_tests/iteration_order/malformed_no_parens.rs:3:10
  |
3 | #[derive(EnumRotate)]
  |          ^^^^^^^^^^
  |
  = help: message: Failed to parse: Error("unexpected end of input, expected parentheses")

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/compilation_failure_tests/iteration_order/malformed_no_parens.rs:7:2
  |
7 | }
  |  ^ consider adding a `main` function to `$DIR/tests/compilation_failure_tests/iteration_order/malformed_no_parens.rs`
